text align fix

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -15,6 +15,7 @@ body {
 .footer {
    	/* Set the fixed height of the footer here */
    	height: 2rem;
+	line-height: 2rem; /* Vertically center the text there */
    	background-color: hsl(0, 0%, 96%);
 	opacity: 0.9;
 }
